# dbt-mssql

./: README.md  contoso_local_database_diagram.html  contoso_local_database_diagram.md
mssql/: README.md  docker-compose.yaml
mssql/init-db.sql/: 00-create-contoso-local.sql  run-initialization.sh
src/: .user.yml  pyproject.toml
src/aggregation/: .user.yml  dbt_project.yml  profiles.yml  run_steps.sh  test-model.sh
src/aggregation/macros/: select_columns_except.sql
src/aggregation/models/: sources.yml
src/aggregation/models/marts/: FactOnlineSales.sql  FactSales.sql  company_1_enriched.sql  companyid_1.sql  companyid_2.sql  companyid_5.sql  companyid_6.sql  companyid_7.sql  va_t_datasets.sql  va_t_fields.sql
