[project]
name = "aggregation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-core (>=1.9.1,<2.0.0)",
    "dbt-sqlserver (>=1.8.0,<2.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "pyodbc>=4.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
